--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,24 @@ captures/
 
 #NDK
 obj/
+
+
+.DS_Store
+
+# Eclipse project files
+.classpath
+.project
+
+# Android Studio
+.idea/
+.gradle
+gradle  
+/*/local.properties
+/*/out
+/*/*/build
+build  
+/*/*/production
+*.iws
+*.ipr
+*~
+*.swp
