--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,24 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity"
-            android:screenOrientation="portrait">
+        <activity
+            android:name=".DynamicOrientationDetection"
+            android:configChanges="orientation">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.GameActivity"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activities.GameActivity" />
+        <activity android:name=".activities.game_land" />
+        <activity android:name=".activities.main_land" />
+        <activity android:name=".game_port"></activity>
     </application>
 
 </manifest>
