--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.GameActivity" />
-        <activity android:name=".SelectImageActivity"></activity>
+        <activity android:name=".SelectImageActivity" />
+        <activity android:name=".SelectParamsPuzzleActivity"></activity>
     </application>
 
 </manifest>
